Added the ability to create new employees graphically. The other pages are WIP

--- a/GoHostingServer/Site/index.html
+++ b/GoHostingServer/Site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Frontend Test</title>
+  <title>Employee Manager</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -11,23 +11,13 @@
   <nav class="NavBar">
     <ul>
         <li><a href="index.html">Home page</a></li>
-        <li>Create Employee</li>
-        <li>Query Employee</li>
+        <li><a href="EmployeeCreation/EmployeeCreation.html">Create Employees</a></li>
+        <li><a href="EmployeeQuery/EmployeeQuery.html">Query Employees</a></li>
+        <li><a href="EmployeeConfiguration/EmployeeConfiguration.html">Configure Employees</a></li>
     </ul>
   </nav>
-  <h1>Frontend Test</h1>
-    <div class="EmployeeQueryTest">
-      <h2>Employee API</h2>
-      <h3>Enter the ID you would like to query</h3>
-      <textarea id="queryIdInput"></textarea><br>
-      <button id="GetEmployeeInfoButton">Query!</button>
-      <h4 id="nameHeader">Name:</h4>
-      <h4 id="positionHeader">Position:</h4>
-      <h4 id="idHeader">ID:</h4>
-      <h4 id="weeklySalaryHeader">Weekly Salary</h4>
-      <h4 id="monthlySalaryHeader">Monthly Salary:</h4>
-      <h4 id="yearlySalaryHeader">Yearly Salary:</h4>
-      <script src="app.js"></script>
-    </div>
+  <h1>Employee Manager</h1>
+  <p>Welcome to the frontend for the employee manager! Manage all your employees with this simple webapp.</p>
+      
 </body>
 </html>
