Added list which shows every registered employee

--- a/GoHostingServer/Site/index.html
+++ b/GoHostingServer/Site/index.html
@@ -18,6 +18,11 @@
   </nav>
   <h1>Employee Manager</h1>
   <p>Welcome to the frontend for the employee manager! Manage all your employees with this simple webapp.</p>
-      
+  <div class="RegisteredEmployeeArea">
+    <h2>Registered Employees</h2>
+    <ul id="registeredEmployeeList"></ul>
+    <button id="refreshButton">Refresh</button>
+    <script src="index.js"></script>
+  </div>
 </body>
 </html>
