Added configuration functionality: demoting, promoting and firing employees is now possible

--- a/GoHostingServer/Site/EmployeeQuery/EmployeeQuery.html
+++ b/GoHostingServer/Site/EmployeeQuery/EmployeeQuery.html
@@ -16,7 +16,7 @@
         <li><a href="../EmployeeConfiguration/EmployeeConfiguration.html">Configure Employees</a></li>
     </ul>
   </nav>
-  <h1>Employee Query</h1>
+  <h1>Query your employees here</h1>
     <div class="EmployeeQueryArea">
       <h2>Enter the ID you want to query</h2>
       <textarea id="queryIdInput"></textarea><br>
