--- a/GoHostingServer/Site/EmployeeConfiguration/EmployeeConfiguration.html
+++ b/GoHostingServer/Site/EmployeeConfiguration/EmployeeConfiguration.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Employee Configuration Site</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
+  <meta name="description" content=""/>
   <link rel="stylesheet" type="text/css" href="../style.css"/>
 </head>
 <body>
@@ -16,6 +16,24 @@
         <li><a href="../EmployeeConfiguration/EmployeeConfiguration.html">Configure Employees</a></li>
     </ul>
   </nav>
-
+  <h1>Configure your employees here</h1>
+  <div class="PromotionDemotionArea">
+    <h2>Promote or demote employees here</h2>
+    <h3>Amount to add/take from monthly salary</h3>
+    <textarea id="AmountTextArea"></textarea>
+    <h3>ID of employee</h3>
+    <textarea id="IdTextArea"></textarea><br>
+    <button id="DemoteButton">Demote</button>
+    <button id="PromoteButton">Promote</button>
+    <script src="PromotionDemotion.js"></script>
+  </div>
+  <br>
+  <div class="FireArea">
+    <h2>Fire employees here</h2>
+    <h3>ID of employee to fire</h3>
+    <textarea id="FireIdTextArea"></textarea><br>
+    <button id="FireButton">Fire</button>
+    <script src="Fire.js"></script>
+  </div>
 </body>
 </html>
