Made frontend code more conventional and accessible

--- a/GoHostingServer/Site/EmployeeConfiguration/EmployeeConfiguration.html
+++ b/GoHostingServer/Site/EmployeeConfiguration/EmployeeConfiguration.html
@@ -19,9 +19,9 @@
   <h1>Configure your employees here</h1>
   <div class="PromotionDemotionArea">
     <h2>Promote or demote employees here</h2>
-    <h3>Amount to add/take from monthly salary</h3>
-    <textarea id="AmountTextArea"></textarea>
-    <h3>ID of employee</h3>
+    <label for="AmountTextArea">Amount to add/take from monthly salary</label><br>
+    <textarea id="AmountTextArea"></textarea><br>
+    <label for="IdTextArea">ID of employee</label><br>
     <textarea id="IdTextArea"></textarea><br>
     <button id="DemoteButton">Demote</button>
     <button id="PromoteButton">Promote</button>
@@ -30,7 +30,7 @@
   <br>
   <div class="FireArea">
     <h2>Fire employees here</h2>
-    <h3>ID of employee to fire</h3>
+    <label for="FireIdTextArea">ID of employee to fire</label><br>
     <textarea id="FireIdTextArea"></textarea><br>
     <button id="FireButton">Fire</button>
     <script src="Fire.js"></script>
