--- a/GoHostingServer/Site/EmployeeCreation/EmployeeCreation.html
+++ b/GoHostingServer/Site/EmployeeCreation/EmployeeCreation.html
@@ -16,18 +16,18 @@
         <li><a href="../EmployeeConfiguration/EmployeeConfiguration.html">Configure Employees</a></li>
     </ul>
   </nav>
-  <h1>Create your employees here</h2>
+  <h1>Create your employees here</h1>
   <div class="EmployeeCreationArea">
     <h2>Input Area</h2>
-    <p>First Name</p>
+    <label for="firstNameTextArea">First Name</label>
     <textarea id="firstNameTextArea"></textarea>
-    <p>Last Name</p>
+    <label for="lastNameTextArea">Last Name</label>
     <textarea id="lastNameTextArea"></textarea>
-    <p>Position</p>
+    <label for="positionTextArea">Position</label>
     <textarea id="positionTextArea"></textarea>
-    <p>ID</p>
+    <label for="idTextArea">ID</label>
     <textarea id="idTextArea"></textarea>
-    <p>Monthly Salary</p>
+    <label for="monthlySalaryTextArea">Monthly Salary</label>
     <textarea id="monthlySalaryTextArea"></textarea><br>
     <button id="submitButton">Submit</button>
     <script src="EmployeeCreation.js"></script>
