Fixed EmployeeCreation.html layout and made Response Entities slightly more readable

--- a/GoHostingServer/Site/EmployeeCreation/EmployeeCreation.html
+++ b/GoHostingServer/Site/EmployeeCreation/EmployeeCreation.html
@@ -19,15 +19,15 @@
   <h1>Create your employees here</h1>
   <div class="EmployeeCreationArea">
     <h2>Input Area</h2>
-    <label for="firstNameTextArea">First Name</label>
-    <textarea id="firstNameTextArea"></textarea>
-    <label for="lastNameTextArea">Last Name</label>
-    <textarea id="lastNameTextArea"></textarea>
-    <label for="positionTextArea">Position</label>
-    <textarea id="positionTextArea"></textarea>
-    <label for="idTextArea">ID</label>
-    <textarea id="idTextArea"></textarea>
-    <label for="monthlySalaryTextArea">Monthly Salary</label>
+    <label for="firstNameTextArea">First Name</label><br>
+    <textarea id="firstNameTextArea"></textarea><br>
+    <label for="lastNameTextArea">Last Name</label><br>
+    <textarea id="lastNameTextArea"></textarea><br>
+    <label for="positionTextArea">Position</label><br>
+    <textarea id="positionTextArea"></textarea><br>
+    <label for="idTextArea">ID</label><br>
+    <textarea id="idTextArea"></textarea><br>
+    <label for="monthlySalaryTextArea">Monthly Salary</label><br>
     <textarea id="monthlySalaryTextArea"></textarea><br>
     <button id="submitButton">Submit</button>
     <script src="EmployeeCreation.js"></script>
